fix: lightbox navigation overflow

--- a/packages/react-components/src/components/lightbox/lightbox.module.css
+++ b/packages/react-components/src/components/lightbox/lightbox.module.css
@@ -38,6 +38,9 @@
   bottom: 10px;
   display: flex;
   flex-direction: row;
+  max-width: 100vw;
+  overflow: auto;
+  padding: token(--space-24) token(--space-24) token(--space-8);
 
   & > button {
     width: var(--thumb-w);
@@ -45,6 +48,7 @@
     margin: 0 token(--space-8);
     border-radius: token(--radius-16);
     overflow: hidden;
+    flex-shrink: 0;
 
     &[aria-current='true'] {
       outline: 2px solid var(--highlight-brand-foreground);
